--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 * {
     box-sizing: border-box;
-    font-family: sans-serif;
-}
-body {
-    background: green;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-image: url("clouds.jpg");
+    font-size: 22px;
+    color: rgb(2, 56, 104);
+}
+
+span.names {
+    display: inline-block;
+    width: 180px;
+}
